fix for account pages, added links for catalog (requires more fixes, and made CSS for main page more readable)

--- a/page1MainPage/styles/styleMainPage.css
+++ b/page1MainPage/styles/styleMainPage.css
@@ -3,16 +3,6 @@
     height: 100%;
   }
 
-  .conteinerOther{
-    color: white;
-    position: relative;
-    max-width: 1440px;
-    min-height: 100%;
-    margin: auto;
-    font-family: 'Suisse';
-    box-sizing: border-box;
-}
-
 .content{
     font-family: "Press Start 2P";
     font-size: 1.389vw;
@@ -30,218 +20,6 @@
     /* grid-template-columns: 288px 877px 280.8px; */
     grid-template-columns: 15vw 61vw 22.7vw;
     color: white;
-}
-
-.conteinerLeftSide{
-
-}
-
-.conteinerUpperTools{
-    display: flex;
-    margin-top: 8px;
-    justify-content: space-evenly;
-}
-
-.undo{
-    width: 2.4vw;
-}
-
-.saveSkin{
-    width: 4vw;
-}
-
-.downloadSkin{
-    width: 4vw;
-}
-
-.redo{
-    width: 2.4vw;
-}
-
-.conteinerTools{
-    margin-top: 31px;
-    display: grid;
-    grid-template-columns: 7vw 7vw;
-    align-items: center;
-    justify-content: space-between;
-    justify-items: center;
-}
-
-.brush{
-    width: 6.71vw;
-    max-width: 79px;
-}
-
-.fillColor{
-    margin-right: 24px;
-    width: 6.71vw;
-    max-width: 79px;
-}
-
-.eraser{
-    width: 6.71vw;
-    max-width: 79px;
-}
-
-.pipette{
-    margin-top: 7px;
-    width: 7.4vw;
-    margin-right: 24px;
-    max-width: 87px;
-}
-
-.pencil{
-    width: 6.71vw;
-    max-width: 79px;
-}
-
-.conteinerTips{
-    margin-top: 45px;
-}
-
-.hotKeys{
-    font-size: 2.1vw;
-}
-
-.smallConteinerForTips{
-    margin-top: 20px;
-}
-
-.textForHotKeys{
-    font-size: 1.17vw;
-}
-
-.combination{
-    margin-top: 10px;
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: 70px 20px 70px;
-}
-
-.ctrl{
-
-}
-
-.plus{
-    font-size: 17px;
-}
-
-.z{
-
-}
-
-.y{
-    
-}
-
-.s{
-    
-}
-
-.space{
-
-}
-
-.mouse{
-    margin-right: 25px;
-}
-
-.one{
-
-}
-
-.conteinerDrawing{
-
-}
-
-.drawingBackground{
-    height: 970px;
-}
-
-.skin{
-    margin-top: -883px;
-    padding-bottom: 260px;
-}
-
-.zoom{
-    margin-top: -9.7vw;
-    padding-bottom: 7.47vw;
-    margin-left: 35.49vw;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-}
-
-.glass{
-
-}
-
-.percentage{
-    color: #E9E000;
-    margin-left: 10px;
-}
-
-.conteinerRightSide{
-
-}
-
-.textBrush{
-    font-size: 3vw;
-}
-
-.conteinerFix{
-    margin-top: 30px;
-}
-
-.conteinerColors{
-    margin-top: 24px;
-}
-
-.textColor{
-    font-size: 1.62vw;
-}
-
-.palette{
-    width: 13.44vw;
-    margin-top: 10px;
-}
-
-.conteinerValueOfColor{
-    display: grid;
-    margin-top: 52px;
-    justify-content: center;
-}
-
-.rgb{
-
-}
-
-.hex{
-
-}
-
-.conteinerSettings{
-    font-size: 1.9vw;
-    margin-top: 10px;
-}
-
-.textSettings{
-    font-size: 1.98vw;
-}
-
-.BoxSlider{
-    margin-top: 32px;
-}
-
-.sliderText{
-    font-size: 1.45vw;
-}
-
-.slider{
-    width: 20vw;
 }
 
 /*1024 - 1440  unspecified*/
@@ -265,274 +43,10 @@
         color: white;
     }
 
-    .conteinerUpperTools{
-        display: flex;
-        margin-top: 8px;
-        justify-content: space-evenly;
-    }
-
-    .conteinerTools{
-        margin-top: 31px;
-        display: grid;
-        grid-template-columns: 100px 100px;
-        align-items: center;
-        justify-content: space-evenly;
-        justify-items: center;
-    }
-
-    .conteinerTips{
-        margin-top: 45px;
-    }
-    
-    .hotKeys{
-        font-size: 25px;
-    }
-    
-    .smallConteinerForTips{
-        margin-top: 20px;
-    }
-    
-    .textForHotKeys{
-        font-size: 17px;
-    }
-    
-    .combination{
-        margin-top: 10px;
-        display: grid;
-        justify-content: center;
-        justify-items: center;
-        align-items: center;
-        grid-template-columns: 70px 20px 70px;
-    }
-
-    .plus{
-        font-size: 17px;
-    }
-
-    .mouse{
-        margin-right: 25px;
-    }
-
-    .drawingBackground{
-        height: 970px;
-    }
-    
-    .skin{
-        margin-top: -883px;
-        padding-bottom: 260px;
-    }
-    
-    .zoom{
-        margin-top: -124px;
-        padding-bottom: 120px;
-        margin-left: 570px;
-        display: flex;
-        justify-content: center;
-        justify-items: center;
-        align-items: center;
-    }
-    
-    .percentage{
-        color: #E9E000;
-        margin-left: 10px;
-    }
-
-    .textBrush{
-        font-size: 41px;
-    }
-    
-    .conteinerFix{
-        margin-top: 30px;
-    }
-    
-    .conteinerColors{
-        margin-top: 24px;
-    }
-    
-    .textColor{
-        font-size: 26px;
-    }
-    
-    .palette{
-        margin-top: 31px;
-        width: 218px;
-    }
-    
-    .conteinerValueOfColor{
-        display: grid;
-        grid-template-columns: 140px 140px;
-        margin-top: 52px;
-        justify-content: space-between;
-        margin-left: 13px;
-        margin-right: 13px;
-    }
-
-    .conteinerSettings{
-        margin-top: 80px;
-    }
-    
-    .textSettings{
-        font-size: 27px;
-    }
-    
-    .BoxSlider{
-        margin-top: 32px;
-    }
-    
-    .sliderText{
-        font-size: 22px;
-    }
-    
-    .slider{
-        width: 300px;
-    }
-/**/
-    .undo{
-        width: auto;
-    }
-    
-    .saveSkin{
-        width: auto;
-    }
-    
-    .downloadSkin{
-        width: auto;
-    }
-    
-    .redo{
-        width: auto;
-    }
-    
-    .brush{
-        width: auto;
-    }
-    
-    .fillColor{
-        margin-right: 0px;
-        width: auto;
-    }
-    
-    .eraser{
-        width: auto;
-    }
-    
-    .pipette{
-        margin-top: 7px;
-        width: auto;
-        margin-right: 0px;
-    }
-    
-    .pencil{
-        width: auto;
-    }
-
-}
-
-@media only screen and ( max-width: 1024px){
-    .conteinerTips{
-        display: none;
-    }
-
-    .percentage{
-        font-size: 3vw;
-    }
-
-    .conteinerTools{
-        justify-items: center;
-        grid-template-columns: 6vw 6vw;
-    }
-
-    .brush,
-    .fillColor,
-    .eraser,
-    .pipette,
-    .pencil{
-        width: 7.71vw;
-        max-width: 71px;
-    }
-
-    .pipette{
-        max-width: 78px;
-        width: 8.5vw;
-    }
-
-    .zoom{
-        margin-top: -13.7vw;
-    }
-
-    .textColor{
-        display: none;
-    }
-
-    .sliderText{
-        font-size: 1.31vw;
-    }
-
 }
 
 @media only screen and ( max-width: 768px){
-    .zoom{
-        margin-top: -171px;
-        padding-bottom: 119px;
-        margin-left: 20vw;
-    }
 
-    .percentage{
-        font-size: 16px;
-    }
-
-    .conteinerUpperTools{
-        width: auto;
-        display: grid;
-        grid-template-columns: 6.4vw;
-    }
-
-    .undo,
-    .redo{
-        width: 4.6vw;
-        max-height: 60px;
-    }
-
-    .saveSkin,
-    .downloadSkin{
-        width: 6vw;
-    }
-
-    .conteinerTools{
-        grid-template-columns: 14vw;
-    }
-
-    .fillColor{
-        margin-right: 0px;
-    }
-
-    .pipette{
-        width: 14.71vw;
-        margin-bottom: -5px;
-        margin-right: 0px;
-    }
-
-    .brush,
-    .fillColor,
-    .eraser,
-    .pipette,
-    .pencil{
-       margin-top: 5px;
-       width: 13.71vw;
-    }
-
-    .textSettings{
-        display: none;
-    }
-
-    .sliderText{
-        font-size: 2.51vw;
-        word-break: break-all;
-    }
-
-    .skin{
-        width: 40.6vw;
-    }
 }
 
 @media only screen and ( max-width: 375px){
