--- a/page2Catalog/styles/catalog.css
+++ b/page2Catalog/styles/catalog.css
@@ -75,6 +75,26 @@
     color: white;
 }
 
+.a,
+.a:link,
+.a:visited,
+.a:focus,
+.a:hover,
+.a:active,
+.a:any-link {
+  text-decoration: none;
+}
+
+.linkCover,
+.linkCover:link,
+.linkCover:visited,
+.linkCover:focus,
+.linkCover:hover,
+.linkCover:active{
+    text-decoration: none;
+}
+
+
 @media only screen and ( max-width: 1280px){
     .catalog_card{
         grid-template-columns: 310px 310px;
