--- a/page4myAccount/styles/style3.css
+++ b/page4myAccount/styles/style3.css
@@ -128,7 +128,8 @@
 
 .skinConteiner{
     margin-left: 27px;
-    margin-right: 2vw;
+    margin-right: 15px;
+    display: inline-block;
 }
 
 .skinPreview{
@@ -145,7 +146,6 @@
 .skinWidth{
     width: 8.92vw;
     margin-left: 1.4vw;
-    height: 310px;
     margin-bottom: -4vw;
 }
 
@@ -320,7 +320,6 @@
     .skinWidth{
         width: 128px;
         margin-left: 20px;
-        height: 310px;
         margin-bottom: -64px;
     }
     
@@ -362,8 +361,8 @@
     .skinWidth{
         width: 12.92vw;
         margin-left: 4vw;
-        height: 310px;
         margin-bottom: -4vw;
+        margin-top: 9px;
     }
 
     .saveWidth{
@@ -392,8 +391,7 @@
     .skinWidth{
         width: 22.92vw;
         margin-left: 16vw;
-        height: 310px;
-        margin-bottom: 0vw;
+        margin-bottom: -21vw
     }
 
     .saveWidth{
